# agentops

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
.github/actions/azure-oidc-login/: action.yml
.github/extensions/agentops-skills/: extension.mjs
.github/plugin/: marketplace.json
.github/workflows/: _build.yml  agentops-watchdog.yml  ci.yml  cut-release.yml  e2e.yml  release.yml  staging.yml
docs/: bundles.md  ci-github-actions.md  concepts.md  doctor-checks.md  doctor-explained.md  e2e-live-architecture.md  e2e-live-setup.md  foundry-evaluation-sdk-built-in-evaluators.md  how-it-works.md  release-process.md  telemetry.md  tutorial-1.0-quickstart.md  tutorial-agent-doctor.md  tutorial-agent-watchdog.md  tutorial-agent-workflow.md  tutorial-baseline-comparison.md  tutorial-basic-foundry-agent.md  tutorial-conversational-agent.md  tutorial-copilot-skills.md  tutorial-end-to-end.md  tutorial-hosted-agent-quickstart.md  tutorial-http-agent.md  tutorial-model-direct.md  tutorial-production-readiness.md  tutorial-prompt-agent-quickstart.md  tutorial-quickstart.md  tutorial-rag.md
docs/media/: agentops-diagrams.vsdx
examples/flat-quickstart/: README.md  agentops.yaml  dataset.jsonl
infra/e2e/: bootstrap.bicep  bootstrap.parameters.example.json  perrun.bicep
infra/e2e/agent-app/: app.py  (+2 more)
plugins/agentops/: README.md  package.json  plugin.json
scripts/: create_support_agent.py  e2e_aggregate_summary.py  e2e_demo.py  e2e_hosted_agent.py  e2e_make_transcript.py  e2e_render_config.py  setup-e2e-new-tenant.ps1
scripts/e2e_data/: basic.jsonl  rag.jsonl  tools.jsonl
tests/integration/: test_cli_flat_schema.py  test_pipeline_smoke.py
tests/unit/: test_agent_analyzer.py  test_agent_categories.py  test_agent_checks_errors.py  test_agent_checks_foundry_config.py  test_agent_checks_opex_workspace.py  test_agent_checks_regression.py  test_agent_checks_spec_conformance.py  test_agent_cli.py  test_agent_config.py  test_agent_findings.py  test_agent_history.py  test_agent_mlops_check.py  test_agent_posture_rules.py  test_agent_results_history.py  test_agent_server.py  test_agentops_config.py  test_azd_env.py  test_azure_resources_discovery.py  test_browse.py  test_cicd.py  test_cli_cockpit_connection_summary.py  test_cli_cockpit_port_conflict.py  test_cli_commands.py  test_cli_explain.py  test_cloud_publisher.py  test_cloud_runner.py  test_cockpit.py  test_dashboard.py  test_diagnostics.py  test_doctor_catalog.py  test_doctor_cli_explain.py  test_dotenv_loader.py  test_e2e_render.py  test_eval_analysis.py  test_evaluators.py  test_foundry_discovery.py  test_init_command.py  test_init_flat.py  test_initializer.py  test_invocations.py  (+18 more)
tmp/artifact-http-aca/: HEADER.md  agentops.yaml  transcript.md
(+131 files in other folders)
