[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-toolkit"
dynamic = ["version"]
description = "CLI, Cockpit, and agent skills to operationalize AI agents on Microsoft Foundry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2,<3",
  "ruamel.yaml>=0.18,<1.0",
  "azure-ai-projects>=2.0.1",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2"]
foundry = [
  "azure-ai-evaluation>=1.0",
  "azure-identity>=1.17",
  "azure-monitor-opentelemetry>=1.6",
  "pandas>=2.0",
]
agent = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "cryptography>=42",
  "markdown>=3.6",
  "azure-monitor-query>=1.3",
  "azure-monitor-opentelemetry>=1.6",
  "azure-identity>=1.17",
  "azure-mgmt-cognitiveservices>=13.5",
  "azure-mgmt-monitor>=6.0",
]

[project.scripts]
agentops = "agentops.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agentops.templates" = [
  "agentops.yaml",
  "agent.yaml",
  "smoke.jsonl",
  "sample-traces.jsonl",
  "icon.png",
  "foundry.svg",
  ".gitignore",
  "project.gitignore",
  "waf-checklist.csv",
  "workflows/*.yml",
  "pipelines/azuredevops/*.yml",
  "skills/*/SKILL.md",
  "agent-server/*",
]
"agentops.agent.knowledge" = ["*.csv"]

[dependency-groups]
dev = [
    "azure-ai-evaluation>=1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.mypy]
plugins = ["pydantic.mypy"]
